--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class="contact-clean"><a href="#" name="contact"></a>
-        <form method="post" style="font-family: 'Conv_YoungSerif-Regular';">
+        <form method="post" style="font-family: 'Conv_YoungSerif-Regular';" netlify>
             <h2 class="text-center">Lets get in touch</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
             <div class="form-group"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><small class="form-text text-danger">Please enter a correct email address.</small></div>
