--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
             <p style="margin-bottom: 10px;">I'm interested in</p>
             <div class="form-group">
-                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Alteration updates</label></div>
-                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Sewing classes</label></div>
+                <div class="form-check"><input class="form-check-input" name="alteration-updates" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Alteration updates</label></div>
+                <div class="form-check"><input class="form-check-input" name="sewing-classes" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Sewing classes</label></div>
             </div>
             <div class="form-group"><button class="btn btn-primary" type="submit">send </button></div>
         </form>
