--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <h4 style="color: rgba(33,37,41,0.8);">Altering jackets</h4>
                 <ul>
                     <li>Shortening sleeves starts at $20</li>
-                    <li>Slevels altered with vent &amp; lining starts at $30</li>
+                    <li>Sleeves altered with vent &amp; lining starts at $30</li>
                     <li>Replace zipper starts at $45</li>
                     <li>Fix or restitch zipper starts at $15</li>
                 </ul>
             </div>
             <div class="pricing-etc">
                 <p style="max-width: 700px;">All other individual projects and alteration prices are based on time involved with completing the project. An estimate may be discussed however, depending on the complexity of a project, the final cost may be higher.<br><br>Custom alterations
-                    and sewing per hour is $40. The turnaroind time varies depending on the amount of work involved and the number of projects I am working on at any given time.</p>
+                    and sewing per hour is $40. The turn around time varies depending on the amount of work involved and the number of projects I am working on at any given time.</p>
             </div>
         </div>
     </div>
