--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <footer class="border rounded border-light shadow-sm d-flex justify-content-between align-items-center" style="padding: 20px;background: white;margin-top: 60px;">
         <p><a href="mailto:inspiredtosew@gmail.com" style="color: #37434d;">inspiredtosew@gmail.com<br></a>303.386.2021<br>2094 Primrose lane <br>Erie, CO 80516</p>
-        <div><a href="https://www.facebook.com/inspiredtosewcraftcreate/" target="_blank"><i class="fa fa-facebook" style="font-size: 32px;margin: 10px;"></i></a><a href="https://www.instagram.com/inspiredtosew.craft.create/" target="_blank"><i class="fa fa-instagram" style="font-size: 32px;margin: 10px;"></i></a></div>
+        <div><a href="https://www.facebook.com/inspiredtosewcraftcreate/" target="_blank"><i class="fa fa-facebook" style="font-size: 32px;margin: 10px;"></i></a><a href="https://www.instagram.com/inspired2sew/" target="_blank"><i class="fa fa-instagram" style="font-size: 32px;margin: 10px;"></i></a></div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
